# laser

./: Cargo.toml  LICENSE  README.md
src/: arch.rs  error.rs  hal.rs  lib.rs  main.rs  sl.rs  sl_lidar_cmd.rs  util.rs
src/arch/: impls.rs
src/examples/: live.rs  mod.rs
src/hal/: abs_rxtx.rs
src/laser/: cmd.rs  lidar.rs  mod.rs  protocol.rs
src/sl/: cmd.rs  error.rs  lidar.rs  mod.rs  serial.rs  types.rs
